# WorldBox-TerrainLab

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: FILE_SYNC.md  GIS_PIPELINE.md  TERRAINLAB_UI_ASSETS.md  WBXGEO_FORMAT.md  WORLDBOX_MOD.md
imagetomap/: __init__.py  __main__.py  calibration.py  clustering.py  consts.py  core.py  georeference.py  models.py  saves.py  semantic.py  terrain.py
tests/: test_terrain.py
worldbox_mod/: install.cmd  install.ps1
worldbox_mod/TerrainLab/: README.md  TerrainLab.csproj  mod.json
worldbox_mod/TerrainLab.PackageProbe/: Program.cs  TerrainLab.PackageProbe.csproj
worldbox_mod/TerrainLab/Code/: TerrainDataOverlay.cs  TerrainEarthElevationModel.cs  TerrainElevationOverlay.cs  TerrainErosion.cs  TerrainErosionOverlay.cs  TerrainFileSync.cs  TerrainGeoTiff.cs  TerrainGeoreference.cs  TerrainHydrology.cs  TerrainHydrologyOverlay.cs  TerrainImageClassification.cs  TerrainImageClassificationOverlay.cs  TerrainImageClustering.cs  TerrainImageClusteringOverlay.cs  TerrainImagePolygonGraphic.cs  TerrainImagePreviewLoader.cs  TerrainImageUiVisuals.cs  TerrainImageWorkspace.cs  TerrainLabEditor.cs  TerrainLabMod.cs  TerrainLabModules.cs  TerrainLabPatches.cs  TerrainLabRuntime.cs  TerrainLabUi.cs  TerrainLayerLegend.cs  TerrainLocalizedUi.cs  TerrainMapLimits.cs  TerrainOverlayRendering.cs  TerrainParameterTooltip.cs  TerrainRelief.cs  TerrainReliefOverlay.cs  TerrainReliefService.cs  TerrainRiverValley.cs  TerrainSpatialScale.cs  TerrainSurfaceEditing.cs  TerrainVegetationSeeder.cs  (+5 more)
(+2 files in other folders)
