[build-system]
requires = [ "setuptools>=61.0.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "imagetomap"
description = "Adaptive image conversion and GIS project layers for WorldBox"
authors = [ { name = "Vlad" } ]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console"
]
dependencies = [ "Pillow>=10.0.0", "numpy>=1.24.0" ]
dynamic = [ "version" ]

[project.urls]
Repository = "https://github.com/MiNdLeSspathFinDeR/WorldBox-TerrainLab"
Documentation = "https://github.com/MiNdLeSspathFinDeR/WorldBox-TerrainLab/tree/main/docs"

[project.optional-dependencies]
speedup = [ "msgspec" ]

[project.scripts]
imagetomap = "imagetomap.__main__:main"

[tool.setuptools]
packages = [ "imagetomap" ]

[tool.setuptools.dynamic.version]
attr = "imagetomap.__version__"

[tool.mypy]
files = [ "imagetomap/" ]
python_version = "3.8"
show_column_numbers = true
show_error_codes = true
strict = true
